# py_html_email

./: MANIFEST.in  README.md  pyproject.toml
src/py_html_email/: __init__.py  html_generic.html
