[project]
name = "py_html_email"
version = "0.0.1"
authors = [
  { name="Tyler Anderson", email="tyleranderson827@gmail.com" },
]
description = "SMTP emailer to send HTML formated emails"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ty-anderson/py_html_email"